--- a/app/src/main/res/layout/row_prompt_profile_right.xml
+++ b/app/src/main/res/layout/row_prompt_profile_right.xml
@@ -79,7 +79,7 @@
             android:focusable="true"
             android:paddingTop="@dimen/_10sdp"
             android:paddingBottom="@dimen/_10sdp"
-            android:src="@drawable/photo_placeholder_3" />
+            android:src="@drawable/person" />
     </LinearLayout>
 
 </LinearLayout>
