--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -36,7 +36,7 @@
         android:layout_below="@id/view"
         android:layout_marginTop="@dimen/_20sdp"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -174,7 +174,7 @@
         android:layout_below="@id/view"
         android:layout_marginTop="@dimen/_20sdp"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -207,6 +207,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:layout_gravity="end"
+                    android:visibility="gone"
                     android:background="@drawable/border_corner_left_gradient">
                     <TextView
                         android:layout_width="wrap_content"
@@ -241,7 +242,8 @@
 
                 <include
                     layout="@layout/row_prompt_profile__left"
-                    android:id="@+id/prompt_answer_1"/>
+                    android:id="@+id/prompt_answer_1"
+                    android:visibility="gone"/>
 
                 <LinearLayout
                     android:id="@+id/button_edit_prompt2"
@@ -255,6 +257,7 @@
                     android:focusable="true"
                     android:layout_gravity="start"
                     android:layout_marginTop="@dimen/_15sdp"
+                    android:visibility="gone"
                     android:background="@drawable/brder_corner_right_gradient">
                     <ImageView
                         android:layout_width="@dimen/_24sdp"
@@ -289,7 +292,8 @@
 
                 <include
                     layout="@layout/row_prompt_profile_right"
-                    android:id="@+id/prompt_answer_2"/>
+                    android:id="@+id/prompt_answer_2"
+                    android:visibility="gone"/>
 
                 <LinearLayout
                     android:id="@+id/button_edit_prompt3"
@@ -303,6 +307,7 @@
                     android:focusable="true"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:layout_gravity="end"
+                    android:visibility="gone"
                     android:background="@drawable/border_corner_left_gradient">
                     <TextView
                         android:layout_width="wrap_content"
@@ -337,7 +342,8 @@
 
                 <include
                     layout="@layout/row_prompt_profile__left"
-                    android:id="@+id/prompt_answer_3"/>
+                    android:id="@+id/prompt_answer_3"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/upload_prompt"
