--- a/app/src/main/res/layout/activity_prompt.xml
+++ b/app/src/main/res/layout/activity_prompt.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,8 +11,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@id/text_scroll_disclaimer">
+        android:layout_above="@id/text_scroll_disclaimer"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/text_screen_title"
             android:layout_width="match_parent"
@@ -36,11 +36,12 @@
             android:id="@+id/layout_question_selected"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/_20sdp"
-            android:paddingEnd="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:orientation="vertical"
+            android:paddingStart="@dimen/_20sdp"
+            android:paddingEnd="@dimen/_20sdp"
             android:visibility="gone">
+
             <TextView
                 android:id="@+id/text_question_title"
                 android:layout_width="match_parent"
@@ -49,6 +50,7 @@
                 android:text="Question"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_18ssp" />
+
             <TextView
                 android:id="@+id/text_question"
                 android:layout_width="match_parent"
@@ -77,95 +79,152 @@
             android:id="@+id/recyclerview_prompt_questions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_20sdp" />
 
         <EditText
             android:id="@+id/edittext_answer_prompt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:background="@drawable/border_drawable"
             android:fontFamily="@font/ptsans_regular"
             android:gravity="top"
+            android:hint="my answer to the prompt.."
             android:inputType="textMultiLine"
             android:lines="2"
             android:padding="@dimen/_10sdp"
             android:scrollbars="vertical"
-            android:hint="my answer to the prompt.."
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
             android:textColor="@color/textSubTitle"
             android:textSize="@dimen/_14ssp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/button_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:background="@drawable/background_gradient_button"
             android:fontFamily="@font/darkergrotesque_bold"
             android:padding="@dimen/_5sdp"
             android:text="Save"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
             android:textSize="@dimen/_16ssp"
             android:visibility="gone" />
 
-        <RelativeLayout
-            android:id="@+id/button_update_prompt_photo"
+        <!-- prompt photo layout -->
+        <LinearLayout
+            android:id="@+id/layout_prompt_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:background="@drawable/border_drawable"
-            android:padding="@dimen/_10sdp"
-            android:clickable="true"
-            android:focusable="true"
-            android:visibility="gone"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp">
+            android:orientation="vertical"
+            android:visibility="gone">
 
-            <TextView
-                android:id="@+id/text_select_promp_image_button"
+            <RelativeLayout
+                android:id="@+id/button_update_prompt_photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/photo_image_view"
-                android:fontFamily="@font/ptsans_regular"
-                android:orientation="vertical"
-                android:text="Select/capture new prompt photo or use the existing photo."
-                android:textColor="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp"
-                app:drawableEndCompat="@drawable/ic_arrow_right" />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/photo_image_view"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_60sdp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:background="@drawable/border_drawable"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/photo_placeholder_1" />
-        </RelativeLayout>
-        <TextView
-            android:id="@+id/button_upload_prompt_anwers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_gradient_button"
-            android:fontFamily="@font/darkergrotesque_bold"
-            android:padding="@dimen/_5sdp"
-            android:text="Update"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_16ssp"
-            android:visibility="gone"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"/>
+                android:padding="@dimen/_10sdp"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/text_select_promp_image_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/photo_image_view"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:orientation="vertical"
+                    android:text="Select/capture new prompt photo or use the existing photo."
+                    android:textColor="@color/textSubTitle"
+                    android:textSize="@dimen/_14ssp"
+                    app:drawableEndCompat="@drawable/ic_arrow_right" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/photo_image_view"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_60sdp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:src="@drawable/photo_placeholder_1" />
+            </RelativeLayout>
+            <!-- Enter caption layout -->
+            <LinearLayout
+                android:id="@+id/caption_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/view"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:fontFamily="@font/darkergrotesque_regular"
+                    android:text="Caption"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_18ssp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/edittext_about"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:background="@drawable/border_drawable"
+                    android:fontFamily="@font/ptsans_regular"
+                    android:gravity="top"
+                    android:hint="Write a caption for your photo"
+                    android:inputType="textMultiLine"
+                    android:lines="5"
+                    android:padding="@dimen/_10sdp"
+                    android:scrollbars="vertical"
+                    android:textColor="@color/textSubTitle"
+                    android:textSize="@dimen/_14ssp" />
+
+                <TextView
+                    android:id="@+id/button_upload_prompt_anwers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:background="@drawable/border_rounded_corner"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:fontFamily="@font/darkergrotesque_bold"
+                    android:padding="@dimen/_10sdp"
+                    android:text="Update"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_18ssp"
+                    app:drawableEndCompat="@drawable/ic_arrow_forward"
+                    app:drawableTint="@color/white" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <TextView
@@ -188,8 +247,8 @@
         style="@style/SpinKitView.Large.Circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_20sdp"
-        app:SpinKit_Color="@color/indicatioractive"
-        android:layout_centerInParent="true"/>
+        app:SpinKit_Color="@color/indicatioractive" />
 </RelativeLayout>
