--- a/app/src/main/res/layout/activity_prompt.xml
+++ b/app/src/main/res/layout/activity_prompt.xml
@@ -184,7 +184,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/edittext_about"
+                    android:id="@+id/edittext_caption"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_20sdp"
@@ -214,7 +214,7 @@
                     android:focusable="true"
                     android:fontFamily="@font/darkergrotesque_bold"
                     android:padding="@dimen/_10sdp"
-                    android:text="Update"
+                    android:text="Upload"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_18ssp"
