feat: add shimmer progress layout in LikeYou fragment

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,6 +4,10 @@
     <item
         android:id="@+id/home"
         android:title="Home"
+        android:icon="@drawable/ic_baseline_home_24"/>
+    <item
+        android:id="@+id/like"
+        android:title="Likes"
         android:icon="@drawable/ic_match_menu_icon"/>
     <item
         android:id="@+id/profile"
