--- a/app/src/main/res/layout/fragment_like_you.xml
+++ b/app/src/main/res/layout/fragment_like_you.xml
@@ -57,9 +57,12 @@
 
     <!-- Profile Layout -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_prompt_section"
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/view" />
+        android:layout_below="@id/view"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingStart="@dimen/_20sdp"
+        android:paddingEnd="@dimen/_20sdp"/>
 
 </RelativeLayout>
