--- a/app/src/main/res/layout/row_liked_profile_thumbnail.xml
+++ b/app/src/main/res/layout/row_liked_profile_thumbnail.xml
@@ -2,26 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/_5sdp"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/_20sdp"
-    android:paddingEnd="@dimen/_20sdp">
+    android:layout_marginEnd="@dimen/_2sdp"
+    android:layout_marginTop="@dimen/_10sdp"
+    android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shapeable_image_view"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
-        android:src="@drawable/photo_placeholder_3"
-        android:theme="@style/ShapeAppearanceOverlay_card_custom_corners2" />
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:src="@drawable/photo_placeholder_3" />
 
     <TextView
+        android:id="@+id/name_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/darkergrotesque_black"
+        android:fontFamily="@font/ptsans_regular"
         android:text="Jane"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/_14ssp"
+        android:padding="@dimen/_5sdp"
+        android:background="@drawable/background_gradient_button"/>
 
 </LinearLayout>
