--- a/app/src/main/res/layout/row_prompt_profile__left.xml
+++ b/app/src/main/res/layout/row_prompt_profile__left.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/two_side_rounded_corner_right"
         android:orientation="vertical"
@@ -23,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:paddingEnd="@dimen/_20sdp"
             android:fontFamily="@font/ptsans_regular"
             android:text="the most adventurous thing I did was..."
             android:textColor="@color/textSubTitle"
@@ -32,7 +34,7 @@
             android:id="@+id/text_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_gravity="start"
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/darkergrotesque_bold"
             android:text="Sky Diving from 22,000 ft"
@@ -48,7 +50,7 @@
         android:background="#E6E6E6" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
